--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   { mot: "Acou", signification: "Entendre" },
   { mot: "Acu", signification: "Aiguille" },
   { mot: "Acr(o)", signification: "Extrémité" },
-  { mot: "Ad", signification: "près de" },
+  { mot: "Ad", signification: "Près de" },
   { mot: "Adéno", signification: "Glande" },
   { mot: "Aér(o)", signification: "Air" },
   { mot: "Algie, Odyn(o)", signification: "Douleur" },
@@ -124,7 +124,7 @@
   { mot: "Bucc(o), Stomat(o)", signification: "Bouche" },
   { mot: "Calc", signification: "Calcium" },
   { mot: "Carcin(o)", signification: "Cancer" },
-  { mot: "Cardi(o)", signification: "Cœur" },
+  { mot: "Cardi(o)", signification: "Coeur" },
   { mot: "Céphal(o)", signification: "Tête" },
   { mot: "Cervic(o)", signification: "Cou" },
   { mot: "Chir(o), Man(o)", signification: "Main" },
@@ -146,7 +146,7 @@
   { mot: "Cyan(o)", signification: "Bleu" },
   { mot: "Cyst(o)", signification: "Vessie" },
   { mot: "Cyto", signification: "Cellule" },
-  { mot: "Dactyl(o), Digit(o)", signification: "Doigts" },
+  { mot: "Dactyl(o), Digit(o)", signification: "Doigt" },
   { mot: "Derm(ato)", signification: "Peau" },
   { mot: "Des-", signification: "Manque" },
   { mot: "Deut", signification: "Second" },
@@ -167,7 +167,7 @@
   { mot: "Ergo", signification: "Travail" },
   { mot: "Érythr(o)", signification: "Rouge" },
   { mot: "Eu-", signification: "Normal" },
-  { mot: "Exo", signification: "À l’extérieur de" },
+  { mot: "Exo", signification: "à l’extérieur de" },
   { mot: "Extra, Ab-, Ecto", signification: "Hors de" },
   { mot: "Faci(o)", signification: "Face" },
   { mot: "-gramme", signification: "Résultat écrit" },
@@ -179,7 +179,6 @@
   { mot: "Gon(o)", signification: "Genou" },
   { mot: "Graphie", signification: "Enregistrement graphique" },
   { mot: "Gyn(o)", signification: "Femme" },
-  { mot: "Héli(o)", signification: "Soleil" },
   { mot: "Hém(ato)", signification: "Sang" },
   { mot: "Hémi", signification: "Demi" },
   { mot: "Hépat(o)", signification: "Foie" },
@@ -194,7 +193,7 @@
   { mot: "Inguin(o)", signification: "Aine" },
   { mot: "Intra-", signification: "Dans" },
   { mot: "Isch", signification: "Arrêt" },
-  { mot: "Iso-", signification: "Egal" },
+  { mot: "Iso-", signification: "égal" },
   { mot: "Ite", signification: "Inflammation" },
   { mot: "Jug(o)", signification: "Joue" },
   { mot: "Kinés", signification: "Mouvement" },
@@ -263,7 +262,7 @@
   { mot: "Patell(o)", signification: "Rotule" },
   { mot: "Path, pathie", signification: "Maladie" },
   { mot: "Pénie", signification: "Carence" },
-  { mot: "Per-", signification: "A travers" },
+  { mot: "Per-", signification: "à travers" },
   { mot: "Peri-", signification: "Autour" },
   { mot: "-pexie", signification: "Fixer" },
   { mot: "Phile", signification: "Affinité pour" },
@@ -302,7 +301,7 @@
   { mot: "Spanio-", signification: "Rare" },
   { mot: "Spondyl(o), Vertébr(o)", signification: "Vertèbres" },
   { mot: "Stéat(o)", signification: "Graisse" },
-  { mot: "Stén(o)", signification: "Étroit" },
+  { mot: "Stén(o)", signification: "étroit" },
   { mot: "Stern(o)", signification: "Sternum" },
   { mot: "Stéth(o)", signification: "Thorax" },
   { mot: "-stomie", signification: "Abouchement" },
