--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   // Paires de mots et de significations
   let motsEtSignifications = [
   { mot: "A(n)", signification: "Absence de" },
-  { mot: "Ana-", signification: "En arrière" },
+  { mot: "Ana-", signification: "De bas en haut},
   { mot: "Abdomin(o)", signification: "Abdomen" },
   { mot: "Acou", signification: "Entendre" },
   { mot: "Acu", signification: "Aiguille" },
