--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
   { mot: "Rén(o), Néphr(o)", signification: "Reins" },
   { mot: "Rhin(o), Nas(o)", signification: "Nez" },
   { mot: "Sacr(o)", signification: "Sacrum" },
-  { mot: "Scapul(o)", signification: "Epaule" },
+  { mot: "Scapul(o)", signification: "épaule" },
   { mot: "Sclér(o)", signification: "Dur" },
   { mot: "Scope", signification: "Instrument" },
   { mot: "Scopie", signification: "Examen visuel" },
