--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
   { mot: "Col, Colon(o)", signification: "Côlon" },
   { mot: "Colp(o)", signification: "Vagin" },
   { mot: "Cox(o)", signification: "Hanche" },
-  { mot: "Cost(o)", signification: "Côte" },
+  { mot: "Cost(o)", signification: "Côtes" },
   { mot: "Crânio", signification: "Crâne" },
   { mot: "Crur(o)", signification: "Cuisse" },
   { mot: "Cry(o)", signification: "Froid" },
