--- a/index.html
+++ b/index.html
@@ -107,27 +107,27 @@
   { mot: "Aniso-", signification: "Inégal" },
   { mot: "Angi(o)", signification: "Vaisseaux" },
   { mot: "Anté", signification: "Avant" },
-  { mot: "Anter(i)", signification: "Devant, avant" },
+  { mot: "Anter(i)", signification: "Devant" },
   { mot: "Anti-", signification: "Contre" },
   { mot: "Artéri(o)", signification: "Artère" },
   { mot: "Arthr(o)", signification: "Articulation" },
   { mot: "Athér(o)", signification: "Gras" },
   { mot: "Audi(o)", signification: "Audition" },
-  { mot: "Auricul(o), Ot(o)", signification: "Oreille" },
+  { mot: "Auricul(o), Ot(o)", signification: "Oreilles" },
   { mot: "Aut(o)", signification: "Soi" },
-  { mot: "Axill(o)", signification: "Aisselle" },
+  { mot: "Axill(o)", signification: "Aisselles" },
   { mot: "Balné(o)", signification: "Bain" },
   { mot: "Bi, Ambi, Di", signification: "Deux" },
   { mot: "Brachi(o)", signification: "Bras" },
   { mot: "Brady", signification: "Lent" },
-  { mot: "Bronch(o), Bronchiol(o)", signification: "Bronche" },
+  { mot: "Bronch(o), Bronchiol(o)", signification: "Bronches" },
   { mot: "Bucc(o), Stomat(o)", signification: "Bouche" },
   { mot: "Calc", signification: "Calcium" },
   { mot: "Carcin(o)", signification: "Cancer" },
   { mot: "Cardi(o)", signification: "Coeur" },
   { mot: "Céphal(o)", signification: "Tête" },
   { mot: "Cervic(o)", signification: "Cou" },
-  { mot: "Chir(o), Man(o)", signification: "Main" },
+  { mot: "Chir(o), Man(o)", signification: "Mains" },
   { mot: "Chlor", signification: "Vert" },
   { mot: "Cholé", signification: "Bile" },
   { mot: "Chondr(o)", signification: "Cartilage" },
@@ -146,7 +146,7 @@
   { mot: "Cyan(o)", signification: "Bleu" },
   { mot: "Cyst(o)", signification: "Vessie" },
   { mot: "Cyto", signification: "Cellule" },
-  { mot: "Dactyl(o), Digit(o)", signification: "Doigt" },
+  { mot: "Dactyl(o), Digit(o)", signification: "Doigts" },
   { mot: "Derm(ato)", signification: "Peau" },
   { mot: "Des-", signification: "Manque" },
   { mot: "Deut", signification: "Second" },
@@ -210,7 +210,7 @@
   { mot: "Lyse", signification: "Dissolution" },
   { mot: "Macro, Méga", signification: "Grand" },
   { mot: "Mal", signification: "Anormal" },
-  { mot: "Mamm(o), Mast(o)", signification: "Sein" },
+  { mot: "Mamm(o), Mast(o)", signification: "Seins" },
   { mot: "Média", signification: "Milieu" },
   { mot: "Mélan(o)", signification: "Noir" },
   { mot: "Méninge", signification: "Membranes" },
@@ -222,11 +222,11 @@
   { mot: "Myél(o)", signification: "Moelle" },
   { mot: "Nécr(o)", signification: "Mort" },
   { mot: "Neur(o), Névr(o)", signification: "Nerf" },
-  { mot: "Ocul(o), Ophtalmo", signification: "Oeil" },
+  { mot: "Ocul(o), Ophtalmo", signification: "Yeux" },
   { mot: "Onco", signification: "Tumeur" },
   { mot: "Ondo(o)", signification: "Dents" },
   { mot: "Onych(o), Ungué(o)", signification: "Ongle" },
-  { mot: "Orchi(o)", signification: "Testicule" },
+  { mot: "Orchi(o)", signification: "Testicules" },
   { mot: "Ortho", signification: "Droit" },
   { mot: "Osm", signification: "Odeur" },
   { mot: "-ose", signification: "Non inflammatoire" },
@@ -240,13 +240,13 @@
   { mot: "Phag(o)", signification: "Manger" },
   { mot: "Pharmaco", signification: "Médicament" },
   { mot: "Pharyng(o)", signification: "Gorge" },
-  { mot: "Phléb(o)", signification: "Veine" },
+  { mot: "Phléb(o)", signification: "Veines" },
   { mot: "Phob(ie)", signification: "Peur" },
   { mot: "Plastie", signification: "Remise en état" },
   { mot: "Plég(ie)", signification: "Paralysie" },
   { mot: "Pnée", signification: "Respiration" },
-  { mot: "Pneumon(o)", signification: "Poumon" },
-  { mot: "Pod(o), Pédi", signification: "Pied" },
+  { mot: "Pneumon(o)", signification: "Poumons" },
+  { mot: "Pod(o), Pédi", signification: "Pieds" },
   { mot: "Poie", signification: "Produire" },
   { mot: "Poly", signification: "Beaucoup" },
   { mot: "Post-", signification: "Après" },
@@ -265,7 +265,7 @@
   { mot: "Peri-", signification: "Autour" },
   { mot: "-pexie", signification: "Fixer" },
   { mot: "Phile", signification: "Affinité pour" },
-  { mot: "Phléb(o), Vein(o)", signification: "Veine" },
+  { mot: "Phléb(o), Vein(o)", signification: "Veines" },
   { mot: "Phot(o)", signification: "Lumière" },
   { mot: "Pleur", signification: "Plèvre" },
   { mot: "Pnée", signification: "Respiration" },
@@ -280,7 +280,7 @@
   { mot: "Ptose", signification: "Chute" },
   { mot: "Ptysie", signification: "Crachat" },
   { mot: "Purpura", signification: "Pourpre" },
-  { mot: "Pulm", signification: "Poumon" },
+  { mot: "Pulm", signification: "Poumons" },
   { mot: "Pyr(o)", signification: "Fièvre" },
   { mot: "Quint-, Penta", signification: "Cinq" },
   { mot: "Quadri, tétra", signification: "Quatre" },
@@ -292,7 +292,7 @@
   { mot: "Rén(o), Néphr(o)", signification: "Reins" },
   { mot: "Rhin(o), Nas(o)", signification: "Nez" },
   { mot: "Sacr(o)", signification: "Sacrum" },
-  { mot: "Scapul(o)", signification: "épaule" },
+  { mot: "Scapul(o)", signification: "épaules" },
   { mot: "Sclér(o)", signification: "Dur" },
   { mot: "Scope", signification: "Instrument" },
   { mot: "Scopie", signification: "Examen visuel" },
@@ -321,8 +321,8 @@
   { mot: "Trich(o), Pil(o), Capill(o)", signification: "Poils, Cheveux" },
   { mot: "Urie", signification: "Urine" },
   { mot: "-ule", signification: "Petit" },
-  { mot: "Vas(o)", signification: "Vaisseau" },
-  { mot: "Vén(o)", signification: "Veine" },
+  { mot: "Vas(o)", signification: "Vaisseaux" },
+  { mot: "Vén(o)", signification: "Veines" },
   { mot: "Vésic(o)", signification: "Vessie" },
   { mot: "Xér(o)", signification: "Sec" },
   { mot: "Xanth(o)", signification: "Jaune" },
