--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
   { mot: "Ergo", signification: "Travail" },
   { mot: "Érythr(o)", signification: "Rouge" },
   { mot: "Eu-", signification: "Normal" },
-  { mot: "Exo", signification: "à l’extérieur de" },
+  { mot: "Exo", signification: "à l'extérieur de" },
   { mot: "Extra, Ab-, Ecto", signification: "Hors de" },
   { mot: "Faci(o)", signification: "Face" },
   { mot: "-gramme", signification: "Résultat écrit" },
